fix: reduce amount of generated high contrast styles (#18332)
Since we know that all of our components have encapsulation turned off, we can pass in the encapsulation parameter to the `cdk-high-contrast` mixin and avoid having to output the styles twice.

(cherry picked from commit 05f59b36a60851a6cc442214ee493922b8052f3d)

--- a/src/material-experimental/mdc-button/button.scss
+++ b/src/material-experimental/mdc-button/button.scss
@@ -12,7 +12,7 @@
 
   // Add an outline to make buttons more visible in high contrast mode. Stroked buttons
   // don't need a special look in high-contrast mode, because those already have an outline.
-  @include cdk-high-contrast {
+  @include cdk-high-contrast(active, off) {
     &:not(.mdc-button--outlined) {
       outline: solid 1px;
     }
