--- a/src/material-experimental/mdc-chips/chips.scss
+++ b/src/material-experimental/mdc-chips/chips.scss
@@ -16,7 +16,7 @@
   // Required for the ripple to clip properly in Safari.
   transform: translateZ(0);
 
-  @include cdk-high-contrast {
+  @include cdk-high-contrast(active, off) {
     outline: solid 1px;
 
     &:focus {
@@ -73,7 +73,7 @@ input.mat-mdc-chip-input {
 }
 
 .mdc-chip__checkmark-path {
-  @include cdk-high-contrast(black-on-white) {
+  @include cdk-high-contrast(black-on-white, off) {
     // SVG colors won't be changed in high contrast mode and since the checkmark is white
     // by default, it'll blend in with the background in black-on-white mode. Override the color
     // to ensure that it's visible. We need !important, because the theme styles are very specific.
